[t] move instance.t to spec/, some small updates. Also updated deprecated-syntax.pod
git-svn-id: http://svn.pugscode.org/pugs@22701 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/t/deprecated-syntax.pod
+++ b/t/deprecated-syntax.pod
@@ -66,7 +66,8 @@ appropriate.
 
 Some tests rely on C<$?PUGS_BACKEND> and similar variables. Since they are not
 specced, they cause failures on other implementations. Either remove these
-variables alltogether, or at enclose them in C<eval '...'>.
+variables alltogether, or fudge them by prepending C<#?pugs emit> on every
+such line.
 
 =head2 "my" in pointy block signatures
 
