--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -3001,6 +3001,7 @@ as a default because the more specific types listed above it didn't match.
     Any       Num       numeric equality        +$_ == X
     Any       Str       string equality         ~$_ eq X
 
+    Hash      Pair      test hash mapping       $_{Xkey} ~~ Xval (e.g. filetests)
     Any       Pair      test object attribute   .Xkey ~~ Xval (e.g. filetests)
 
     Set       Set       identical sets          $_ === X
