[smop] deleted old mention of smop's previous name
git-svn-id: http://svn.pugscode.org/pugs@22935 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/README
+++ b/v6/README
@@ -9,7 +9,7 @@ There are currently 3 active subprojects:
 
 - v6-KindaPerl6 is a full Perl 6 implementation, currently written mostly in MiniPerl6.
 
-- smop (formerly yap6) is a C implementation of the Perl 6 runtime.
+- smop is a C implementation of the Perl 6 runtime.
 
 
 Inactive projects are under misc/
