Fix a misnamed reference.
git-svn-id: http://svn.pugscode.org/pugs@24056 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -1433,7 +1433,7 @@ Assignment operators
 
     += -= **= xx= .= etc.
 
-See L</Assignment operators>.
+See L</Assignment metaoperators>.
 
 =back
 
