--- a/AUTHORS
+++ b/AUTHORS
@@ -107,6 +107,7 @@ Gwern Branwen
 Hans van Dok                     (FOAD)
 Herbert Breunung                 (LICHTKIND)
 Hezekiah "hcarty" Carty
+Hinrik Orn Sigurdsson            (HINRIK)    Hinrik Örn Sigurðsson
 Hsin-Chan Chien                  (HCCHIEN)   簡信昌
 Ian "Igloo" Lynagh
 Ilmari "wolverian" Vacklin
