[STD_blue] Makefile targets for selecting a working STD version (head is broken).
git-svn-id: http://svn.pugscode.org/pugs@24111 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elfish/STD_blue/README
+++ b/misc/elfish/STD_blue/README
@@ -2,6 +2,7 @@ STD_blue is a src/perl6/gimme5 based parser for elf.
 
 QUICKSTART
 
+$ make known_working_STD
 $ make elfblue
 $ make check
 $ ./elfblue -v -s -e 'say 3'
