--- a/misc/Perl6-Highlight/README
+++ b/misc/Perl6-Highlight/README
@@ -1,16 +1,8 @@
 Perl6-Highlight version 0.01
 ============================
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
-
-A README file is required for CPAN modules since CPAN extracts the
-README file from a module distribution so that people browsing the
-archive can use it get an idea of the modules uses. It is usually a
-good idea to provide version information here so that people can
-decide whether fixes for the module are worth downloading.
+Highlights Perl 6 code. For more information, please refer to 
+Perl6::Highlight.
 
 INSTALLATION
 
