[Syntax::Highlight::Perl6] more namespace renaming
git-svn-id: http://svn.pugscode.org/pugs@24279 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/Syntax-Highlight-Perl6/README
+++ b/misc/Syntax-Highlight-Perl6/README
@@ -1,8 +1,8 @@
-Perl6-Highlight version 0.01
-============================
+Syntax-Highlight-Perl6 version 0.01
+===================================
 
 Highlights Perl 6 code. For more information, please refer to 
-Perl6::Highlight.
+Syntax::Highlight::Perl6.
 
 INSTALLATION
 
