--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,6 +1,6 @@
-Revision history for Perl extension Perl6::Highlight.
+Revision history for Perl extension Syntax::Highlight::Perl6.
 
 0.01  Wed Dec 10 16:54:22 2008
 	- original version; created by h2xs 1.23 with options
-		-AXc -n Perl6::Highlight
+		-AXc -n Syntax::Highlight::Perl6
 
