--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,6 +1,9 @@
-Revision history for Perl extension Syntax::Highlight::Perl6.
+Revision history for Syntax::Highlight::Perl6.
 
-0.01  Wed Dec 10 16:54:22 2008
-	- original version; created by h2xs 1.23 with options
-		-AXc -n Syntax::Highlight::Perl6
+0.02  Wed Dec 12 2008
+    _ Privatized some methods that you should not use
+    - Fixed missing POD comments for public methods
+
+0.01  Wed Dec 11 2008
+	- Initial release (really alpha)
 
