--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,9 +1,15 @@
 Revision history for Syntax::Highlight::Perl6.
 
-0.02  Wed Dec 12 2008
-    _ Privatized some methods that you should not use
-    - Fixed missing POD comments for public methods
+0.01_01  Wed Dec 12 2008
+    - Bumped version to 0.01_01 (Developer release)
+    - Privatized some methods that you should not use
+    - Removed dependency on File::Slurp and YAML::Dumper
+    - Replaced yaml() method with parse_trees
+    - Renamed ansi() method with ansi_text
+    - Major refactoring and documentation fixes
 
 0.01  Wed Dec 11 2008
 	- Initial release (really alpha)
+
+
 
