[lowdoc] fixed typo
git-svn-id: http://svn.pugscode.org/pugs@24305 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/lowdoc/01_base.pod
+++ b/v6/smop/lowdoc/01_base.pod
@@ -30,7 +30,7 @@ can only talk to its responder interface.
 
 The Responder Interface, which is also binary-compatible with
 SMOP__Object implements the lowlevel part of the meta object protocol,
-it's through the Resopnder Interface that you can perform any action
+it's through the Responder Interface that you can perform any action
 on the object.
 
 =cut
