[Syntax::Highlight::Perl6] Bumped version to 0.02
git-svn-id: http://svn.pugscode.org/pugs@24308 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,5 +1,8 @@
 Revision history for Syntax::Highlight::Perl6.
 
+0.02 Wed Dec 12 2008
+    - more stable features
+
 0.01_01  Wed Dec 12 2008
     - Bumped version to 0.01_01 (Developer release)
     - Privatized some methods that you should not use
