[Syntax::Highlight::Perl6] META.yml is now copied correctly in 'make dist' [Syntax::Highlight::Perl6] Bumped version to 0.021
git-svn-id: http://svn.pugscode.org/pugs@24319 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,5 +1,8 @@
 Revision history for Syntax::Highlight::Perl6.
 
+0.021 Wed Dec 12 2008
+    - META.yml is now copied correctly in 'make dist'
+
 0.02 Wed Dec 12 2008
     - Refactored ugly File::Spec->joins and inlining of js/css code.
     - 'clean_html' option is now 'inline_resources'
