[Syntax::Highlight::Perl6] Bumped version to 0.022 [Syntax::Highlight::Perl6] removed archived releases
git-svn-id: http://svn.pugscode.org/pugs@24324 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,5 +1,8 @@
 Revision history for Syntax::Highlight::Perl6.
 
+0.022 Wed Dec 12 2008
+    - Fixed Makefile.PL so that META.yml is generated automatically
+
 0.021 Wed Dec 12 2008
     - META.yml is now copied correctly in 'make dist'
 
